RESOLVED FIXED225198
Floating object are not removed from the initial containing block
https://bugs.webkit.org/show_bug.cgi?id=225198
Summary Floating object are not removed from the initial containing block
alan
Reported 2021-04-29 11:03:34 PDT
Attachments
Patch (4.22 KB, patch)
2021-04-29 12:19 PDT, alan
no flags
alan
Comment 1 2021-04-29 12:19:29 PDT
EWS
Comment 2 2021-04-29 15:43:17 PDT
Committed r276816 (237174@main): <https://commits.webkit.org/237174@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427368 [details].
Note You need to log in before you can comment on or make changes to this bug.